--- a/ExitTask.Presentation/Resources/Resource.resx
+++ b/ExitTask.Presentation/Resources/Resource.resx
@@ -156,8 +156,14 @@
   <data name="EmailUnique" xml:space="preserve">
     <value />
   </data>
+  <data name="FinishCity" xml:space="preserve">
+    <value>Конечный город</value>
+  </data>
   <data name="FirstName" xml:space="preserve">
     <value>Имя</value>
+  </data>
+  <data name="Hotel" xml:space="preserve">
+    <value>Гостиница</value>
   </data>
   <data name="Hotels" xml:space="preserve">
     <value>Гостиницы</value>
@@ -189,6 +195,9 @@
   <data name="PasswordConfirmationFail" xml:space="preserve">
     <value>Пароли не совпадают</value>
   </data>
+  <data name="Picture" xml:space="preserve">
+    <value>Картинка</value>
+  </data>
   <data name="RequiredDescription" xml:space="preserve">
     <value>Поле "Описание" является обязательным</value>
   </data>
@@ -215,6 +224,9 @@
   </data>
   <data name="Stars" xml:space="preserve">
     <value>Количество звезд</value>
+  </data>
+  <data name="StartCity" xml:space="preserve">
+    <value>Начальный город</value>
   </data>
   <data name="Tours" xml:space="preserve">
     <value>Туры</value>
